# Exercise-1

./: .gitignore  README.md  pyproject.toml  run.py
environment/: pyvenv.cfg
environment/Scripts/: activate  activate.bat
scripts/: code.py  gen-process.ipynb  run_1.py
src/: data.py
