[tool.poetry]
name = "exercise-1"
version = "0.1.0"
description = "Datayoga exercise-1"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
sklearn = "^0.0"
matplotlib = "^3.5.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
